# Nunakonez

Мат/: CMakeLists.txt
Мат/Шах/lab1/lab1/: CMakeLists.txt
Мат/Шах/lab1/lab1/8/: CMakeLists.txt
Мат/Шах/lab2/lab2/: CMakeLists.txt  lb2.c  task1.c  task2.c
Мат/Шах/lab3/Sol1/do_while/: CMakeLists.txt  Header.h  do_while.c  nom1.c  nom2.c  nom3.c  nom4.c  nom5.c
Мат/Шах/lab3/Sol1/if/: CMakeLists.txt  Header.h  for.c  func1.c  func2.c  func3.c  func4.c  func5.c  pch.h
Мат/Шах/lab3/Sol1/while/: CMakeLists.txt  Header1.h  task1.c  task2.c  task3.c  task4.c  task5.c  while.c
Мат/Шах/lab4/lab4/: CMakeLists.txt  lb4.c
Мат/Шах/lab5/lab5/: CMakeLists.txt  lb5.c
